[package]
name = "test-e"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version = "0.34.3", default-features = false, features = ["glow"], }
egui = "0.34.3"
egui-winit = "0.34.3"
egui_glow = {version = "0.34.3", features = ["winit"]}
env_logger = "0.11.11"
glow = "0.17.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
itertools = "0.15.0"
log = "0.4.33"
winit = "0.30.13"
ab_glyph = "0.2.32"


