[package]
name = "glow-bloom"
version = "0.1.0"
edition = "2024"
description = "A GPU-accelerated glow/bloom text rendering library using egui and glow"
license = "MIT"
repository = "https://github.com/your-username/glow-bloom"

[dependencies]
eframe = {version = "0.34.3", default-features = false, features = ["glow"], }
egui = "0.34.3"
egui-winit = "0.34.3"
egui_glow = {version = "0.34.3", features = ["winit"]}
env_logger = "0.11.11"
glow = "0.17.0"
log = "0.4.33"
ab_glyph = "0.2.32"


