[package]
name = "glow-bloom"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A GPU-accelerated glow/bloom text rendering library using egui and glow"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/timoxxor/egui-bloom"
documentation = "https://docs.rs/glow-bloom"
readme = "README.md"
keywords = ["egui", "bloom", "glow", "gpu", "text-rendering"]
categories = ["rendering::graphics-api", "gui", "graphics"]
exclude = ["test/**"]

[dependencies]
eframe = {version = "0.34.3", default-features = false, features = ["glow"], }
egui = "0.34.3"
egui-winit = "0.34.3"
egui_glow = {version = "0.34.3", features = ["winit"]}
env_logger = "0.11.11"
glow = "0.17.0"
log = "0.4.33"
ab_glyph = "0.2.32"


